# cexec

./: .gitignore  Cargo.toml  clippy.toml  hygiene.py  readme.md
adr/: 001_system_overview.md  002_message_formats.html  002_message_formats.md  002_message_formats.md.bak
src/: cexec.toml  config.rs  exec.rs  lib.rs  message.rs  test.rs
