[package]
name = "cexec"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"

[lib]
name = "cexec"
path = "src/lib.rs"

[[bin]]
name = "cexec"
path = "src/cexec.rs"

[[bin]]
name = "cexec-server"
path = "src/cexec_server.rs"


[dependencies]
wasmer = "1.0.2"
dirs = "3.0"


